--- a/fw_shutdown.yml
+++ b/fw_shutdown.yml
@@ -2,7 +2,8 @@
   hosts: PA44
   gather_facts: false
   connection: local
-
+  collections:
+      - 'paloaltonetworks.panos'
   vars:
     palo_provider:
       ip_address: '192.168.100.44'
