--- a/fw_shutdown.yml
+++ b/fw_shutdown.yml
@@ -5,6 +5,10 @@
   
   collections:
       - 'paloaltonetworks.panos'
+  roles:
+    - role: PaloAltoNetworks.paloaltonetworks
+      
+  
   vars:
     palo_provider:
       ip_address: '192.168.100.44'
