--- a/fw_shutdown.yml
+++ b/fw_shutdown.yml
@@ -5,10 +5,7 @@
   
   collections:
       - 'paloaltonetworks.panos'
-  roles:
-    - role: PaloAltoNetworks.paloaltonetworks
-      
-  
+
   vars:
     palo_provider:
       ip_address: '192.168.100.44'
@@ -18,7 +15,7 @@
 
   tasks:
     - name: Firewall Shutdown
-      paloaltonetworks.panos.panos_op:
+      panos_op:
         provider: '{{ palo_provider }}'
         cmd: '<request><shutdown><system></system></shutdown></request>'
         cmd_is_xml: true
