fw_shutdown.yml

--- a/fw_shutdown.yml
+++ b/fw_shutdown.yml
@@ -4,7 +4,7 @@
   connection: local
   
   collections:
-      - 'paloaltonetworks.panos'
+    - paloaltonetworks.panos
 
   vars:
     palo_provider:
