--- a/fw_shutdown.yml
+++ b/fw_shutdown.yml
@@ -6,6 +6,9 @@
   collections:
     - paloaltonetworks.panos
 
+  roles:
+    - role: PaloAltoNetworks.paloaltonetworks
+
   vars:
     palo_provider:
       ip_address: '192.168.100.44'
