fw_shutdown.yml

--- a/fw_shutdown.yml
+++ b/fw_shutdown.yml
@@ -12,7 +12,7 @@
 
   tasks:
     - name: Firewall Shutdown
-      panos_op:
+      paloaltonetworks.panos.panos_op:
         provider: '{{ palo_provider }}'
         cmd: '<request><shutdown><system></system></shutdown></request>'
         cmd_is_xml: true
