--- a/pa45.yml
+++ b/pa45.yml
@@ -1,1 +1,20 @@
+- name: Palo Alto Playbook
+  hosts: PA44
+  gather_facts: false
+  connection: local
+  
+  vars:
+    palo_provider:
+      ip_address: '192.168.100.44'
+      username: 'apidmin'
+      password: '2wsx@WSX'
+      api_key: ''
 
+  tasks:
+    - name: Issue firewall shutdown command
+      paloaltonetworks.panos.panos_op:
+        provider: '{{ palo_provider }}'
+        cmd: '<request><shutdown><system></system></shutdown></request>'
+        cmd_is_xml: true
+      register: "cmd_output"
+      failed_when: '"Command succeeded with no output" not in cmd_output.msg'
